WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24743
REGRESSION (
r41840
): Incorrect hit testing at hsbccreditcard.com
https://bugs.webkit.org/show_bug.cgi?id=24743
Summary
REGRESSION (r41840): Incorrect hit testing at hsbccreditcard.com
mitz
Reported
2009-03-21 17:19:44 PDT
At hsbccreditcard.com, everything below the logo does not respond to clicking and control-clicking.
Attachments
Reduction
(373 bytes, text/html)
2009-03-21 22:17 PDT
,
Cameron Zwarich (cpst)
no flags
Details
Patch, testcase, changelog
(4.28 KB, patch)
2009-03-22 11:32 PDT
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
Patch, testcase, changelog
(4.58 KB, patch)
2009-03-22 11:36 PDT
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Cameron Zwarich (cpst)
Comment 1
2009-03-21 21:07:31 PDT
I'll try to reduce this, but I won't be the one to fix it.
Cameron Zwarich (cpst)
Comment 2
2009-03-21 21:11:43 PDT
This regressed between the
r41760
and
r41844
nightlies. There are a few changes to hit testing code in that range.
Cameron Zwarich (cpst)
Comment 3
2009-03-21 22:17:24 PDT
Created
attachment 28830
[details]
Reduction Here's a really simple reduction. I'll bisect local builds to find the point of failure.
Cameron Zwarich (cpst)
Comment 4
2009-03-21 22:49:30 PDT
This regressed in
r41840
:
http://trac.webkit.org/changeset/41840
I am unassigning this. One of the hit testing wizards should fix this. ;-)
Simon Fraser (smfr)
Comment 5
2009-03-22 10:13:14 PDT
Hm,
r41840
should not have affected non-3d hit testing.
Simon Fraser (smfr)
Comment 6
2009-03-22 11:32:48 PDT
Created
attachment 28834
[details]
Patch, testcase, changelog
mitz
Comment 7
2009-03-22 11:36:24 PDT
Comment on
attachment 28834
[details]
Patch, testcase, changelog
> + * fast/layers/zindex-hit-test.html: Added.
Please generate results, add them to the change log and check them in.
> + #container { > + /* position: absolute;*/ > + }
You can just remove this rule.
> \ No newline at end of file
Please add a newline. r=me
Simon Fraser (smfr)
Comment 8
2009-03-22 11:36:47 PDT
Created
attachment 28835
[details]
Patch, testcase, changelog Add test expected file.
mitz
Comment 9
2009-03-22 11:38:27 PDT
Comment on
attachment 28835
[details]
Patch, testcase, changelog The rest of my previous comments still apply to this patch. r=me
Simon Fraser (smfr)
Comment 10
2009-03-22 11:43:40 PDT
http://trac.webkit.org/changeset/41900
Cameron Zwarich (cpst)
Comment 11
2009-03-23 19:47:47 PDT
***
Bug 24766
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug