2009-03-22  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein

        https://bugs.webkit.org/show_bug.cgi?id=24743

        Fix hit testing regression from r41840. We need to pass the temporary
        HitTestResult when testing sublayers, then only copy to 'result' when
        the layer is known to have been hit.

        Test: fast/layers/zindex-hit-test.html

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::hitTestLayer):

git-svn-id: svn://svn.chromium.org/blink/trunk@41900 bbb929c8-8fbe-4397-9dbb-9b2b20218538